# home-ops

./: .env.json  .gitignore  .gitleaks.toml  .gitleaksignore  .infisical.json  .justfile  .markdownlint-cli2.yaml  .mcp.json  .mise.toml  .pre-commit-config.yaml  .secrets.baseline  .sops.yaml  .yaml-validator.yaml  .yamlfmt  .yamllint.yaml  .yayamlls.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  MIGRATION_MASTER_PLAN.md  README.md  TODO.md  Taskfile.yaml  add-gpu-search-result.md  renovate.json5  ruff.toml
scripts/hass/: __init__.py  __main__.py  _client.py  activity.py  area.py  attributes.py  cli.py  config.py  dashboard.py  energy.py  logs.py  orient.py  pyproject.toml  raw.py  repairs.py  states.py  template.py  trigger.py
scripts/hass/hass/: __init__.py  __main__.py  _errors.py  _format.py  cli.py  dashboard.py  energy.py  entity.py  history.py  repairs.py  services.py
scripts/hass/tests/: test_cli.py  test_errors.py
scripts/hops/: __init__.py  __main__.py  _diagnose.py  _errors.py  _format.py  _gateway.py  _helm.py  _nodes.py  _pod_detail.py  _runner.py  _time.py  _workload.py  app.py  backup.py  cli.py  db.py  debug.py  dns.py  flux.py  node.py  pyproject.toml  storage.py  validate.py
scripts/hops/app/: __init__.py  cluster.py  commands.py  gateway.py  gather.py  pod_detail.py
scripts/hops/core/: __init__.py  format.py  helm.py  resolve.py  runner.py
scripts/hops/dns/: __init__.py  commands.py  render.py
scripts/hops/flux/: __init__.py  status.py
scripts/hops/hops/: backup.py  cli.py  db.py  storage.py
scripts/hops/hops/app/: commands.py  events.py  pod_detail.py
scripts/hops/hops/core/: helm.py  nodes.py  resolve.py  workload.py
scripts/hops/hops/dns/: commands.py  psql.py
scripts/hops/hops/flux/: __init__.py  status.py  toggle.py
scripts/hops/hops/query/: __init__.py  (+4 more)
scripts/hops/query/: __init__.py  _client.py  _vm.py  alerts.py  logs.py  logs_render.py  metrics.py  metrics_render.py
scripts/hops/tests/: conftest.py  test_commands.py  test_dns_psql.py  test_format.py  test_resolver.py  test_time.py
scripts/paperless/: __main__.py  bulk.py  cli.py  correspondent.py  field.py  pyproject.toml  tag.py  type.py
scripts/paperless/paperless/: __init__.py  _click.py  _client.py  _errors.py  _permissions.py  config.py  correspondent.py  group.py  tag.py  type.py  user.py  workflow.py
scripts/paperless/tests/: conftest.py  test_classify.py  test_config.py  test_doc.py
(+1117 files in other folders)
