[project]
name = "hass"
version = "0.1.0"
description = "LLM-optimized Home Assistant API wrapper"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "homeassistant-api>=4.0",
    "aiohttp>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
